[gd_scene load_steps=40 format=3 uid="uid://dk5kvc27hsf71"]

[ext_resource type="Script" path="res://Scripts/battle.gd" id="1_rqkbr"]
[ext_resource type="PackedScene" uid="uid://cqi1d8gihq0xv" path="res://color_rect.tscn" id="2_d4jdv"]
[ext_resource type="Texture2D" uid="uid://c54o6sks6k71s" path="res://Art/Village/Deserted Village/Battle/Deserted Cupcake Village Battle Normal.png" id="3_0m688"]
[ext_resource type="Texture2D" uid="uid://boe6vhcnfo0xr" path="res://Art/Character/MC Idle Sprite(Battle).png" id="3_woqp6"]
[ext_resource type="Texture2D" uid="uid://xbs15nubouy6" path="res://Art/UI [Updated]/Battle (New)/Battle Tray.png" id="5_dx085"]
[ext_resource type="Texture2D" uid="uid://dp6i3nvf1cheq" path="res://Art/Bosses/Raddish Boss/Radish Boss Idle Sprite.png" id="6_o6c28"]
[ext_resource type="Texture2D" uid="uid://drpjbv2muvqcv" path="res://Art/UI [Updated]/Battle (New)/Attack Button Normal.png" id="8_p0nm4"]
[ext_resource type="Texture2D" uid="uid://b44vd0b7f7ryj" path="res://Art/UI [Updated]/Battle (New)/Attack Button Pressed.png" id="9_8totb"]
[ext_resource type="Texture2D" uid="uid://cv4x04yibhjl8" path="res://Art/UI [Updated]/Battle (New)/Attack Button Hovered.png" id="10_1ymgu"]
[ext_resource type="Texture2D" uid="uid://d077qna4mon3j" path="res://Art/UI [Updated]/Battle (New)/Attack Button Disabled.png" id="11_4jbvl"]
[ext_resource type="Texture2D" uid="uid://cjemqk0vgqn8l" path="res://Art/UI [Updated]/Battle (New)/Defend Button Normal.png" id="12_8wx0l"]
[ext_resource type="Texture2D" uid="uid://es48ps8l4by4" path="res://Art/UI [Updated]/Battle (New)/Defend Button Pressed.png" id="13_w05ky"]
[ext_resource type="Texture2D" uid="uid://dld0fc4r27fu1" path="res://Art/UI [Updated]/Battle (New)/Defend Button Hovered.png" id="14_04npe"]
[ext_resource type="Texture2D" uid="uid://0fmd3qg63grv" path="res://Art/UI [Old]/Battle/Battle Text Button.png" id="14_pboex"]
[ext_resource type="Texture2D" uid="uid://bfgu4ulxuakv7" path="res://Art/UI [Updated]/Battle (Old)/HP Fill Fixed.png" id="15_a2qia"]
[ext_resource type="Texture2D" uid="uid://x8rlmqanfxoa" path="res://Art/UI [Updated]/Battle (New)/Defend Button Disabled.png" id="15_o867c"]
[ext_resource type="Texture2D" uid="uid://8duk3joobql" path="res://Art/UI [Updated]/Battle (Old)/HP Back Enemy.png" id="16_2pc08"]
[ext_resource type="Texture2D" uid="uid://ccrsd3ly2r4s2" path="res://Art/UI [Updated]/Battle (New)/Wait Button Normal.png" id="16_i60og"]
[ext_resource type="Texture2D" uid="uid://cggmmpych8mke" path="res://Art/UI [Updated]/Battle (New)/Wait Button Pressed.png" id="17_6onvk"]
[ext_resource type="Texture2D" uid="uid://bruojjpgok5vl" path="res://Art/UI [Old]/Battle/AP Filled Icon.png" id="17_8ueu7"]
[ext_resource type="Texture2D" uid="uid://bxmao6i3gamfa" path="res://Art/UI [Updated]/Battle (Old)/HP Fill Enemy.png" id="17_v2knm"]
[ext_resource type="Texture2D" uid="uid://mag5kft6b4y2" path="res://Art/UI [Updated]/Battle (New)/Wait Button Hovered.png" id="18_6mqmo"]
[ext_resource type="Texture2D" uid="uid://canvnbg2vun3y" path="res://Art/UI [Updated]/Battle (New)/Wait Button Disabled.png" id="19_6m48j"]
[ext_resource type="Texture2D" uid="uid://wopjg7js4tew" path="res://Art/UI [Updated]/Battle (New)/Flee Button Normal.png" id="20_25r11"]
[ext_resource type="Texture2D" uid="uid://cr3nlppssdpo8" path="res://Art/UI [Old]/Battle/Battle Text Button Hover.png" id="20_c153p"]
[ext_resource type="Texture2D" uid="uid://ccf3rj2b51m1v" path="res://Art/UI [Updated]/Battle (New)/Flee Button Pressed.png" id="21_30n5m"]
[ext_resource type="Texture2D" uid="uid://dw5xdig3nlwfo" path="res://Art/UI [Old]/Battle/Battle Text Button Dis.png" id="21_ur7p4"]
[ext_resource type="LabelSettings" uid="uid://bd184ntgknbm1" path="res://Fonts/MainMenuButtonFont.tres" id="22_ljdfw"]
[ext_resource type="Texture2D" uid="uid://dw1nirr3r7l8l" path="res://Art/UI [Updated]/Battle (New)/Flee Button Hovered.png" id="22_yvaat"]
[ext_resource type="Texture2D" uid="uid://bbl8bukra5u7" path="res://Art/UI [Updated]/Battle (New)/Flee Button Disabled.png" id="23_quo2h"]
[ext_resource type="Texture2D" uid="uid://dcdjwqa0e1u0b" path="res://Art/UI [Updated]/Battle (New)/AP Empty Icon.png" id="24_4hrf2"]
[ext_resource type="Texture2D" uid="uid://bfl0kcl0gfax1" path="res://Art/UI [Updated]/Battle (New)/HP Frame.png" id="24_dp8h3"]
[ext_resource type="Texture2D" uid="uid://2ddcarycodno" path="res://Art/UI [Updated]/Battle (New)/Battle Text Button Normal.png" id="24_qbh64"]
[ext_resource type="Texture2D" uid="uid://bc6kjnu22dlh2" path="res://Art/UI [Updated]/Battle (New)/Battle Text Button Pressed.png" id="25_li2bu"]
[ext_resource type="Texture2D" uid="uid://dpm7s432tcaj2" path="res://Art/UI [Updated]/Battle (New)/Battle Text Button Hovered.png" id="26_71kdv"]
[ext_resource type="Texture2D" uid="uid://c1d1nqelp4a6e" path="res://Art/UI [Updated]/Battle (New)/Battle Text Button Disabled.png" id="27_yfiun"]

[sub_resource type="Animation" id="Animation_rs55o"]
length = 2.5
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("BattleStart/ColorRect:material:shader_parameter/amount")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 2.5)
}

[sub_resource type="Animation" id="Animation_tahno"]
resource_name = "battle_start"
length = 2.0
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("BattleStart/ColorRect:material:shader_parameter/amount")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 2)
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_0c4gh"]
_data = {
"RESET": SubResource("Animation_rs55o"),
"battle_start": SubResource("Animation_tahno")
}

[node name="Battle" type="CanvasLayer"]
process_mode = 1
layer = 3
script = ExtResource("1_rqkbr")

[node name="BattleStart" type="Node" parent="."]

[node name="ColorRect" parent="BattleStart" groups=["BattleStart"] instance=ExtResource("2_d4jdv")]

[node name="AnimationPlayer" type="AnimationPlayer" parent="BattleStart"]
root_node = NodePath("../..")
libraries = {
"": SubResource("AnimationLibrary_0c4gh")
}

[node name="Background" type="Node" parent="."]

[node name="TextureRect" type="TextureRect" parent="Background" groups=["Battle"]]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_0m688")
expand_mode = 1

[node name="Player" type="Node" parent="."]

[node name="PlayerSprite" type="Sprite2D" parent="Player" groups=["Battle"]]
position = Vector2(210, 745)
scale = Vector2(0.433951, 0.433951)
texture = ExtResource("3_woqp6")

[node name="Weapon1" type="Sprite2D" parent="Player" groups=["Battle"]]
position = Vector2(385, 541)
scale = Vector2(0.116667, 0.116667)

[node name="Weapon2" type="Sprite2D" parent="Player" groups=["Battle"]]
position = Vector2(505, 657)
scale = Vector2(0.111806, 0.111806)

[node name="Weapon3" type="Sprite2D" parent="Player" groups=["Battle"]]
position = Vector2(622, 804)
scale = Vector2(0.101215, 0.101215)

[node name="Weapon4" type="Sprite2D" parent="Player" groups=["Battle"]]
position = Vector2(734, 949)
scale = Vector2(0.115432, 0.115432)

[node name="Enemy" type="Node" parent="."]

[node name="Enemy3" type="Sprite2D" parent="Enemy"]
visible = false
position = Vector2(1218, 309)
scale = Vector2(0.34477, 0.34477)
texture = ExtResource("6_o6c28")

[node name="Enemy4" type="Sprite2D" parent="Enemy"]
visible = false
position = Vector2(1664, 307)
scale = Vector2(0.335048, 0.335048)
texture = ExtResource("6_o6c28")

[node name="Enemy1" type="Sprite2D" parent="Enemy"]
visible = false
position = Vector2(985, 473)
scale = Vector2(0.412826, 0.412826)
texture = ExtResource("6_o6c28")

[node name="Enemy2" type="Sprite2D" parent="Enemy"]
visible = false
position = Vector2(1499, 524)
scale = Vector2(0.412826, 0.412826)
texture = ExtResource("6_o6c28")

[node name="UI" type="Node" parent="."]

[node name="Buttons" type="Node" parent="UI"]

[node name="ButtonBackground" type="NinePatchRect" parent="UI/Buttons" groups=["Battle", "ButtonsWBack"]]
visible = false
offset_left = 810.0
offset_top = 652.0
offset_right = 1874.0
offset_bottom = 1041.0
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource("5_dx085")
region_rect = Rect2(0, 0, 129, 129)
patch_margin_left = 27
patch_margin_top = 53
patch_margin_right = 26
patch_margin_bottom = 52

[node name="BattleText" type="Label" parent="UI/Buttons/ButtonBackground" groups=["Battle"]]
visible = false
layout_mode = 0
offset_left = 28.0
offset_top = 29.0
offset_right = 1037.0
offset_bottom = 360.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 26
text = "Placeholder"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="TurnButtons" type="Node2D" parent="UI/Buttons"]

[node name="AttackButton" type="TextureButton" parent="UI/Buttons/TurnButtons" groups=["Buttons", "ButtonsWBack"]]
visible = false
offset_left = 912.0
offset_top = 704.0
offset_right = 1051.0
offset_bottom = 843.0
texture_normal = ExtResource("8_p0nm4")
texture_pressed = ExtResource("9_8totb")
texture_hover = ExtResource("10_1ymgu")
texture_disabled = ExtResource("11_4jbvl")
ignore_texture_size = true
stretch_mode = 0

[node name="DefendButton" type="TextureButton" parent="UI/Buttons/TurnButtons" groups=["Buttons", "ButtonsWBack"]]
visible = false
offset_left = 1131.0
offset_top = 705.0
offset_right = 1270.0
offset_bottom = 844.0
texture_normal = ExtResource("12_8wx0l")
texture_pressed = ExtResource("13_w05ky")
texture_hover = ExtResource("14_04npe")
texture_disabled = ExtResource("15_o867c")
ignore_texture_size = true
stretch_mode = 0

[node name="WaitButton" type="TextureButton" parent="UI/Buttons/TurnButtons" groups=["Buttons", "ButtonsWBack"]]
visible = false
offset_left = 1392.0
offset_top = 704.0
offset_right = 1531.0
offset_bottom = 843.0
disabled = true
texture_normal = ExtResource("16_i60og")
texture_pressed = ExtResource("17_6onvk")
texture_hover = ExtResource("18_6mqmo")
texture_disabled = ExtResource("19_6m48j")
ignore_texture_size = true
stretch_mode = 0

[node name="FleeButton" type="TextureButton" parent="UI/Buttons/TurnButtons" groups=["Buttons", "ButtonsWBack"]]
visible = false
offset_left = 1640.0
offset_top = 704.0
offset_right = 1779.0
offset_bottom = 843.0
disabled = true
texture_normal = ExtResource("20_25r11")
texture_pressed = ExtResource("21_30n5m")
texture_hover = ExtResource("22_yvaat")
texture_disabled = ExtResource("23_quo2h")
ignore_texture_size = true
stretch_mode = 0

[node name="OrderButton" type="TextureButton" parent="UI/Buttons/TurnButtons" groups=["Buttons", "ButtonsWBack"]]
visible = false
offset_left = 920.0
offset_top = 896.0
offset_right = 1261.0
offset_bottom = 978.0
disabled = true
texture_normal = ExtResource("24_qbh64")
texture_pressed = ExtResource("25_li2bu")
texture_hover = ExtResource("26_71kdv")
texture_disabled = ExtResource("27_yfiun")
ignore_texture_size = true
stretch_mode = 0

[node name="Label" type="Label" parent="UI/Buttons/TurnButtons/OrderButton" groups=["Buttons", "ButtonsWBack"]]
layout_mode = 0
offset_left = 106.0
offset_top = 22.0
offset_right = 210.0
offset_bottom = 66.0
theme_override_font_sizes/font_size = 25
text = "ORDER"
label_settings = ExtResource("22_ljdfw")

[node name="SpecialsButton" type="TextureButton" parent="UI/Buttons/TurnButtons" groups=["Buttons", "ButtonsWBack"]]
visible = false
offset_left = 1416.0
offset_top = 896.0
offset_right = 1757.0
offset_bottom = 978.0
disabled = true
texture_normal = ExtResource("24_qbh64")
texture_pressed = ExtResource("25_li2bu")
texture_hover = ExtResource("26_71kdv")
texture_disabled = ExtResource("27_yfiun")
ignore_texture_size = true
stretch_mode = 0

[node name="Label" type="Label" parent="UI/Buttons/TurnButtons/SpecialsButton" groups=["Buttons", "ButtonsWBack"]]
layout_mode = 0
offset_left = 103.0
offset_top = 22.0
offset_right = 240.0
offset_bottom = 66.0
theme_override_font_sizes/font_size = 25
text = "SPECIALS"
label_settings = ExtResource("22_ljdfw")

[node name="TargetButtons" type="Node2D" parent="UI/Buttons"]
visible = false

[node name="AttackEnemy1Button" type="TextureButton" parent="UI/Buttons/TargetButtons"]
visible = false
offset_left = 913.0
offset_top = 835.0
offset_right = 1233.0
offset_bottom = 934.0
texture_normal = ExtResource("14_pboex")
texture_hover = ExtResource("20_c153p")
texture_disabled = ExtResource("21_ur7p4")
ignore_texture_size = true
stretch_mode = 0

[node name="Label" type="Label" parent="UI/Buttons/TargetButtons/AttackEnemy1Button"]
layout_mode = 0
offset_left = 95.0
offset_top = 32.0
offset_right = 224.0
offset_bottom = 74.0
theme_override_font_sizes/font_size = 30
text = "ENEMY 1"

[node name="AttackEnemy2Button" type="TextureButton" parent="UI/Buttons/TargetButtons"]
visible = false
offset_left = 1424.0
offset_top = 835.0
offset_right = 1744.0
offset_bottom = 934.0
texture_normal = ExtResource("14_pboex")
texture_hover = ExtResource("20_c153p")
texture_disabled = ExtResource("21_ur7p4")
ignore_texture_size = true
stretch_mode = 0

[node name="Label" type="Label" parent="UI/Buttons/TargetButtons/AttackEnemy2Button"]
layout_mode = 0
offset_left = 95.0
offset_top = 32.0
offset_right = 224.0
offset_bottom = 74.0
theme_override_font_sizes/font_size = 30
text = "ENEMY 2"

[node name="AttackEnemy3Button" type="TextureButton" parent="UI/Buttons/TargetButtons"]
visible = false
offset_left = 911.0
offset_top = 697.0
offset_right = 1231.0
offset_bottom = 796.0
texture_normal = ExtResource("14_pboex")
texture_hover = ExtResource("20_c153p")
texture_disabled = ExtResource("21_ur7p4")
ignore_texture_size = true
stretch_mode = 0

[node name="Label" type="Label" parent="UI/Buttons/TargetButtons/AttackEnemy3Button"]
layout_mode = 0
offset_left = 95.0
offset_top = 32.0
offset_right = 224.0
offset_bottom = 74.0
theme_override_font_sizes/font_size = 30
text = "ENEMY 3"

[node name="AttackBackButton" type="TextureButton" parent="UI/Buttons/TargetButtons"]
visible = false
offset_left = 854.0
offset_top = 958.0
offset_right = 990.0
offset_bottom = 1000.0
texture_normal = ExtResource("14_pboex")
texture_hover = ExtResource("20_c153p")
texture_disabled = ExtResource("21_ur7p4")
ignore_texture_size = true
stretch_mode = 0

[node name="Label" type="Label" parent="UI/Buttons/TargetButtons/AttackBackButton"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 18
text = "Back"
horizontal_alignment = 1
vertical_alignment = 1

[node name="AttackEnemy4Button" type="TextureButton" parent="UI/Buttons/TargetButtons"]
visible = false
offset_left = 1421.0
offset_top = 697.0
offset_right = 1741.0
offset_bottom = 796.0
texture_normal = ExtResource("14_pboex")
texture_hover = ExtResource("20_c153p")
texture_disabled = ExtResource("21_ur7p4")
ignore_texture_size = true
stretch_mode = 0

[node name="Label" type="Label" parent="UI/Buttons/TargetButtons/AttackEnemy4Button"]
layout_mode = 0
offset_left = 95.0
offset_top = 32.0
offset_right = 224.0
offset_bottom = 74.0
theme_override_font_sizes/font_size = 30
text = "ENEMY 4"

[node name="Player" type="Node" parent="UI"]

[node name="AP" type="TextureProgressBar" parent="UI/Player"]
visible = false
offset_left = 66.0
offset_top = 151.0
offset_right = 189.0
offset_bottom = 309.0
scale = Vector2(0.65, 0.65)
fill_mode = 3
nine_patch_stretch = true
texture_under = ExtResource("24_4hrf2")
texture_progress = ExtResource("17_8ueu7")
radial_initial_angle = 143.5

[node name="AP2" type="TextureProgressBar" parent="UI/Player"]
visible = false
offset_left = 164.0
offset_top = 151.0
offset_right = 287.0
offset_bottom = 309.0
scale = Vector2(0.65, 0.65)
fill_mode = 3
nine_patch_stretch = true
texture_under = ExtResource("24_4hrf2")
texture_progress = ExtResource("17_8ueu7")
radial_initial_angle = 143.5

[node name="AP3" type="TextureProgressBar" parent="UI/Player"]
visible = false
offset_left = 262.0
offset_top = 152.0
offset_right = 385.0
offset_bottom = 310.0
scale = Vector2(0.65, 0.65)
fill_mode = 3
nine_patch_stretch = true
texture_under = ExtResource("24_4hrf2")
texture_progress = ExtResource("17_8ueu7")
radial_initial_angle = 143.5

[node name="AP4" type="TextureProgressBar" parent="UI/Player"]
visible = false
offset_left = 359.0
offset_top = 152.0
offset_right = 482.0
offset_bottom = 310.0
scale = Vector2(0.65, 0.65)
fill_mode = 3
nine_patch_stretch = true
texture_under = ExtResource("24_4hrf2")
texture_progress = ExtResource("17_8ueu7")
radial_initial_angle = 143.5

[node name="AP5" type="TextureProgressBar" parent="UI/Player"]
visible = false
offset_left = 460.0
offset_top = 152.0
offset_right = 583.0
offset_bottom = 310.0
scale = Vector2(0.65, 0.65)
fill_mode = 3
nine_patch_stretch = true
texture_under = ExtResource("24_4hrf2")
texture_progress = ExtResource("17_8ueu7")
radial_initial_angle = 143.5

[node name="AP6" type="TextureProgressBar" parent="UI/Player"]
visible = false
offset_left = 66.0
offset_top = 290.0
offset_right = 189.0
offset_bottom = 448.0
scale = Vector2(0.65, 0.65)
fill_mode = 3
nine_patch_stretch = true
texture_under = ExtResource("24_4hrf2")
texture_progress = ExtResource("17_8ueu7")
radial_initial_angle = 143.5

[node name="AP7" type="TextureProgressBar" parent="UI/Player"]
visible = false
offset_left = 164.0
offset_top = 290.0
offset_right = 287.0
offset_bottom = 448.0
scale = Vector2(0.65, 0.65)
fill_mode = 3
nine_patch_stretch = true
texture_under = ExtResource("24_4hrf2")
texture_progress = ExtResource("17_8ueu7")
radial_initial_angle = 143.5

[node name="AP8" type="TextureProgressBar" parent="UI/Player"]
visible = false
offset_left = 262.0
offset_top = 290.0
offset_right = 385.0
offset_bottom = 448.0
scale = Vector2(0.65, 0.65)
fill_mode = 3
nine_patch_stretch = true
texture_under = ExtResource("24_4hrf2")
texture_progress = ExtResource("17_8ueu7")
radial_initial_angle = 143.5

[node name="AP9" type="TextureProgressBar" parent="UI/Player"]
visible = false
offset_left = 359.0
offset_top = 290.0
offset_right = 482.0
offset_bottom = 448.0
scale = Vector2(0.65, 0.65)
fill_mode = 3
nine_patch_stretch = true
texture_under = ExtResource("24_4hrf2")
texture_progress = ExtResource("17_8ueu7")
radial_initial_angle = 143.5

[node name="AP10" type="TextureProgressBar" parent="UI/Player"]
visible = false
offset_left = 460.0
offset_top = 290.0
offset_right = 583.0
offset_bottom = 448.0
scale = Vector2(0.65, 0.65)
fill_mode = 3
nine_patch_stretch = true
texture_under = ExtResource("24_4hrf2")
texture_progress = ExtResource("17_8ueu7")
radial_initial_angle = 143.5

[node name="PlayerHealth" type="TextureProgressBar" parent="UI/Player" groups=["Battle"]]
offset_left = 36.0
offset_top = 53.0
offset_right = 838.0
offset_bottom = 131.0
step = 0.0
value = 100.0
nine_patch_stretch = true
texture_under = ExtResource("24_dp8h3")
texture_progress = ExtResource("15_a2qia")
tint_progress = Color(0, 1, 0, 1)

[node name="Enemy" type="Node" parent="UI"]

[node name="Enemy1Health" type="TextureProgressBar" parent="UI/Enemy"]
visible = false
offset_left = 695.0
offset_top = 206.0
offset_right = 1069.0
offset_bottom = 255.0
max_value = 80.0
step = 0.0
value = 80.0
fill_mode = 1
nine_patch_stretch = true
texture_under = ExtResource("16_2pc08")
texture_progress = ExtResource("17_v2knm")
tint_progress = Color(0, 1, 0, 1)

[node name="Enemy2Health" type="TextureProgressBar" parent="UI/Enemy"]
visible = false
offset_left = 1247.0
offset_top = 216.0
offset_right = 1621.0
offset_bottom = 265.0
max_value = 80.0
step = 0.0
value = 80.0
fill_mode = 1
nine_patch_stretch = true
texture_under = ExtResource("16_2pc08")
texture_progress = ExtResource("17_v2knm")
tint_progress = Color(0, 1, 0, 1)

[node name="Enemy3Health" type="TextureProgressBar" parent="UI/Enemy"]
visible = false
offset_left = 988.0
offset_top = 51.0
offset_right = 1362.0
offset_bottom = 100.0
max_value = 80.0
step = 0.0
value = 80.0
fill_mode = 1
nine_patch_stretch = true
texture_under = ExtResource("16_2pc08")
texture_progress = ExtResource("17_v2knm")
tint_progress = Color(0, 1, 0, 1)

[node name="Enemy4Health" type="TextureProgressBar" parent="UI/Enemy"]
visible = false
offset_left = 1443.0
offset_top = 63.0
offset_right = 1817.0
offset_bottom = 112.0
max_value = 80.0
step = 0.0
value = 80.0
fill_mode = 1
nine_patch_stretch = true
texture_under = ExtResource("16_2pc08")
texture_progress = ExtResource("17_v2knm")
tint_progress = Color(0, 1, 0, 1)

[connection signal="animation_finished" from="BattleStart/AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
[connection signal="pressed" from="UI/Buttons/TurnButtons/AttackButton" to="." method="_on_attack_button_pressed"]
[connection signal="pressed" from="UI/Buttons/TurnButtons/DefendButton" to="." method="_on_defend_button_pressed"]
[connection signal="pressed" from="UI/Buttons/TurnButtons/WaitButton" to="." method="_on_wait_button_pressed"]
[connection signal="pressed" from="UI/Buttons/TurnButtons/FleeButton" to="." method="_on_flee_button_pressed"]
[connection signal="pressed" from="UI/Buttons/TargetButtons/AttackEnemy1Button" to="." method="_on_attack_enemy_1_button_pressed"]
[connection signal="pressed" from="UI/Buttons/TargetButtons/AttackEnemy2Button" to="." method="_on_attack_enemy_2_button_pressed"]
[connection signal="pressed" from="UI/Buttons/TargetButtons/AttackEnemy3Button" to="." method="_on_attack_enemy_3_button_pressed"]
[connection signal="pressed" from="UI/Buttons/TargetButtons/AttackBackButton" to="." method="_on_attack_back_button_pressed"]
[connection signal="pressed" from="UI/Buttons/TargetButtons/AttackEnemy4Button" to="." method="_on_attack_enemy_4_button_pressed"]
